--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,14 +1,14 @@
 {
-  "Тестовый пример": "Test example",
-  "Перевод": "Translate",
-  "Главная страница": "Main page",
-  "Язык": "English",
-  "новый перевод": "новый перевод",
-  "Страница не найдена": "Page not found",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Reload page",
-  "throw error": "throw error",
-  "Главная": "Main",
-  "О сайте": "About us",
-  "Переключить": "Переключить"
+    "Тестовый пример": "Test example",
+    "Перевод": "Translate",
+    "Главная страница": "Main page",
+    "Язык": "English",
+    "новый перевод": "новый перевод",
+    "Страница не найдена": "Page not found",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Обновить страницу": "Reload page",
+    "throw error": "throw error",
+    "Главная": "Main",
+    "О сайте": "About us",
+    "short-lng": "En"
 }
