--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,7 @@
     "throw error": "throw error",
     "Главная": "Главная",
     "О сайте": "О сайте",
-    "short-lng": "Ru"
+    "short-lng": "Ru",
+    "modal": "Lorem ipsum dolor sit amet, consectetur adipisicing elit.\n Accusamus cumque debitis deleniti ex nam nihil nisi, quasi tempore voluptas voluptates.\n",
+    "logIn": "Войти"
 }
