--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,7 @@
     "О сайте": "О сайте",
     "short-lng": "Ru",
     "modal": "Lorem ipsum dolor sit amet, consectetur adipisicing elit.\n Accusamus cumque debitis deleniti ex nam nihil nisi, quasi tempore voluptas voluptates.\n",
-    "logIn": "Войти"
+    "logIn": "Войти",
+    "increment": "прибавить",
+    "decrement": "отнять"
 }
