--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
     "Тестовый пример": "Test example",
     "Перевод": "Translate",
     "Главная страница": "Main page",
-    "Язык": "English",
+    "Язык": "Русский",
     "новый перевод": "новый перевод",
     "Страница не найдена": "Page not found",
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
@@ -10,7 +10,7 @@
     "throw error": "throw error",
     "Главная": "Main",
     "О сайте": "About us",
-    "short-lng": "En",
+    "short-lng": "Ru",
     "modal": "Lorem ipsum dolor sit amet, consectetur adipisicing elit.\n Accusamus cumque debitis deleniti ex nam nihil nisi, quasi tempore voluptas voluptates.\n",
     "logIn": "LogIn",
     "increment": "increment",
