--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,7 +2,7 @@
     "Тестовый пример": "Тестовый пример",
     "Перевод": "Перевод",
     "Главная страница": "Главная страница",
-    "Язык": "Русский",
+    "Язык": "English",
     "новый перевод": "новый перевод",
     "Страница не найдена": "Страница не найдена",
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
@@ -10,7 +10,7 @@
     "throw error": "throw error",
     "Главная": "Главная",
     "О сайте": "О сайте",
-    "short-lng": "Ru",
+    "short-lng": "En",
     "modal": "Lorem ipsum dolor sit amet, consectetur adipisicing elit.\n Accusamus cumque debitis deleniti ex nam nihil nisi, quasi tempore voluptas voluptates.\n",
     "logIn": "Войти",
     "increment": "прибавить",
