--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,16 +3,18 @@
     "Перевод": "Translate",
     "Главная страница": "Main page",
     "Язык": "Русский",
-    "новый перевод": "новый перевод",
     "Страница не найдена": "Page not found",
-    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Произошла непредвиденная ошибка": "Unexpected error",
     "Обновить страницу": "Reload page",
-    "throw error": "throw error",
+    "throw error": "Throw error",
     "Главная": "Main",
     "О сайте": "About us",
     "short-lng": "Ru",
     "modal": "Lorem ipsum dolor sit amet, consectetur adipisicing elit.\n Accusamus cumque debitis deleniti ex nam nihil nisi, quasi tempore voluptas voluptates.\n",
     "logIn": "LogIn",
     "increment": "increment",
-    "decrement": "decrement"
+    "decrement": "decrement",
+    "Enter text": "Enter text",
+    "Enter username": "Enter username",
+    "Enter password": "Enter password"
 }
