[feat] add Profile page, add memo, improve Sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,8 +7,10 @@
     "Произошла непредвиденная ошибка": "Unexpected error",
     "Обновить страницу": "Reload page",
     "throw error": "Throw error",
-    "Главная": "Main",
-    "О сайте": "About us",
+    "Main": "Main",
+    "About us": "About us",
+    "Profile": "Profile",
+    "ProfilePage": "Profile Page",
     "short-lng": "Ru",
     "logIn": "LogIn",
     "logOut": "LogOut",
