--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,8 +7,10 @@
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
     "Обновить страницу": "Обновить страницу",
     "throw error": "Пробросить ошибку",
-    "Главная": "Главная",
-    "О сайте": "О сайте",
+    "Main": "Главная",
+    "About us": "О сайте",
+    "Profile": "Профиль",
+    "ProfilePage": "Страница профиля",
     "short-lng": "En",
     "logIn": "Войти",
     "logOut": "Выйти",
