[feat] add strict mode, add some types, fix come tests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,23 +1,27 @@
 {
-    "Тестовый пример": "Test example",
-    "Перевод": "Translate",
-    "Главная страница": "Main page",
-    "Язык": "Русский",
-    "Страница не найдена": "Page not found",
-    "Произошла непредвиденная ошибка": "Unexpected error",
-    "Обновить страницу": "Reload page",
-    "throw error": "Throw error",
-    "Main": "Main",
-    "About us": "About us",
-    "Profile": "Profile",
-    "ProfilePage": "Profile Page",
-    "short-lng": "Ru",
-    "logIn": "LogIn",
-    "logOut": "LogOut",
-    "increment": "increment",
-    "decrement": "decrement",
-    "Enter text": "Enter text",
-    "Enter username": "Enter username",
-    "Enter password": "Enter password",
-    "authForm": "Authorization form"
+  "About us": "About us",
+  "Edit profile": "Edit profile",
+  "Enter password": "Enter password",
+  "Enter text": "Enter text",
+  "Enter username": "Enter username",
+  "First name": "First name",
+  "Last name": "Last name",
+  "Main": "Main",
+  "Profile": "Profile",
+  "ProfilePage": "Profile Page",
+  "authForm": "Authorization form",
+  "decrement": "decrement",
+  "increment": "increment",
+  "logIn": "LogIn",
+  "logOut": "LogOut",
+  "short-lng": "Ru",
+  "throw error": "Throw error",
+  "Главная страница": "Main page",
+  "О сайте": "О сайте",
+  "Обновить страницу": "Reload page",
+  "Перевод": "Translate",
+  "Произошла непредвиденная ошибка": "Unexpected error",
+  "Страница не найдена": "Page not found",
+  "Тестовый пример": "Test example",
+  "Язык": "Русский"
 }
