--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,23 +1,27 @@
 {
-    "Тестовый пример": "Тестовый пример",
-    "Перевод": "Перевод",
-    "Главная страница": "Главная страница",
-    "Язык": "English",
-    "Страница не найдена": "Страница не найдена",
-    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-    "Обновить страницу": "Обновить страницу",
-    "throw error": "Пробросить ошибку",
-    "Main": "Главная",
-    "About us": "О сайте",
-    "Profile": "Профиль",
-    "ProfilePage": "Страница профиля",
-    "short-lng": "En",
-    "logIn": "Войти",
-    "logOut": "Выйти",
-    "increment": "прибавить",
-    "decrement": "отнять",
-    "Enter text": "Введите текст",
-    "Enter username": "Введите имя",
-    "Enter password": "Введите пароль",
-    "authForm": "Форма авторизации"
+  "About us": "О сайте",
+  "Edit profile": "Редактировать",
+  "Enter password": "Введите пароль",
+  "Enter text": "Введите текст",
+  "Enter username": "Введите имя",
+  "First name": "Ваше имя",
+  "Last name": "Ваша фамилия",
+  "Main": "Главная",
+  "Profile": "Профиль",
+  "ProfilePage": "Страница профиля",
+  "authForm": "Форма авторизации",
+  "decrement": "отнять",
+  "increment": "прибавить",
+  "logIn": "Войти",
+  "logOut": "Выйти",
+  "short-lng": "En",
+  "throw error": "Пробросить ошибку",
+  "Главная страница": "Главная страница",
+  "О сайте": "О сайте",
+  "Обновить страницу": "Обновить страницу",
+  "Перевод": "Перевод",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Страница не найдена": "Страница не найдена",
+  "Тестовый пример": "Тестовый пример",
+  "Язык": "English"
 }
