[feat] add Avatar and Select components, add Currency and Country entities, add ProfilePage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,11 @@
 {
   "About us": "About us",
+  "Age": "Age",
+  "Avatar": "Avatar",
+  "Cancel edit": "Cancel edit",
+  "City": "City",
+  "Country": "Country",
+  "Currency": "Currency",
   "Edit profile": "Edit profile",
   "Enter password": "Enter password",
   "Enter text": "Enter text",
@@ -9,6 +15,8 @@
   "Main": "Main",
   "Profile": "Profile",
   "ProfilePage": "Profile Page",
+  "Save": "Save",
+  "Username": "Username",
   "authForm": "Authorization form",
   "decrement": "decrement",
   "increment": "increment",
