--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,11 @@
 {
   "About us": "О сайте",
+  "Age": "Возраст",
+  "Avatar": "Аватар",
+  "Cancel edit": "Отменить",
+  "City": "Город",
+  "Country": "Страна",
+  "Currency": "Валюта",
   "Edit profile": "Редактировать",
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
@@ -9,6 +15,8 @@
   "Main": "Главная",
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
+  "Save": "Сохранить",
+  "Username": "Никнейм",
   "authForm": "Форма авторизации",
   "decrement": "отнять",
   "increment": "прибавить",
