[test] add tests for profile, some fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "": "",
   "About us": "About us",
   "Age": "Age",
   "Avatar": "Avatar",
@@ -19,9 +20,14 @@
   "Username": "Username",
   "authForm": "Authorization form",
   "decrement": "decrement",
+  "incorrectAge": "Incorrect Age",
+  "incorrectLength": "Incorrect Length",
   "increment": "increment",
   "logIn": "LogIn",
   "logOut": "LogOut",
+  "noData": "No data found",
+  "required": "Required field",
+  "serverError": "Server Error",
   "short-lng": "Ru",
   "throw error": "Throw error",
   "Главная страница": "Main page",
