--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+  "": "",
   "About us": "О сайте",
   "Age": "Возраст",
   "Avatar": "Аватар",
@@ -19,9 +20,14 @@
   "Username": "Никнейм",
   "authForm": "Форма авторизации",
   "decrement": "отнять",
+  "incorrectAge": "Некорректный возраст",
+  "incorrectLength": "Некорректная длина",
   "increment": "прибавить",
   "logIn": "Войти",
   "logOut": "Выйти",
+  "noData": "Нет данных",
+  "required": "Обязательное поле",
+  "serverError": "Ошибка сервера",
   "short-lng": "En",
   "throw error": "Пробросить ошибку",
   "Главная страница": "Главная страница",
