[feat] fix FetchProfileData error handle, add private protectеd routes, add new pages ArticlesPage and ArticleDataPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -36,5 +36,8 @@
   "Произошла непредвиденная ошибка": "Unexpected error",
   "Страница не найдена": "Page not found",
   "Тестовый пример": "Test example",
-  "Язык": "Русский"
+  "Язык": "Русский",
+    "Articles page": "Articles page",
+  "Article detail page": "Article detail page",
+  "Articles": "Articles"
 }
