--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,5 +36,8 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English"
+  "Язык": "English",
+    "Articles page": "Страница статей",
+  "Article detail page": "Детальная страница статьи",
+  "Articles": "Статьи"
 }
