--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,9 +1,13 @@
 {
   "About us": "О сайте",
   "Age": "Возраст",
+  "Article detail page": "Детальная страница статьи",
+  "Articles": "Статьи",
+  "Articles page": "Страница статей",
   "Avatar": "Аватар",
   "Cancel edit": "Отменить",
   "City": "Город",
+  "Comments": "Комментарии",
   "Country": "Страна",
   "Currency": "Валюта",
   "Edit profile": "Редактировать",
@@ -13,6 +17,7 @@
   "First name": "Ваше имя",
   "Last name": "Ваша фамилия",
   "Main": "Главная",
+  "No comments": "Комментариев нет",
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
   "Save": "Сохранить",
@@ -36,8 +41,5 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English",
-    "Articles page": "Страница статей",
-  "Article detail page": "Детальная страница статьи",
-  "Articles": "Статьи"
+  "Язык": "English"
 }
