--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,7 @@
   "Country": "Страна",
   "Currency": "Валюта",
   "Edit profile": "Редактировать",
+  "Enter comment text": "Введите текст комментария",
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
@@ -21,6 +22,7 @@
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
   "Save": "Сохранить",
+  "Send": "Отправить",
   "Username": "Никнейм",
   "authForm": "Форма авторизации",
   "decrement": "отнять",
@@ -39,6 +41,7 @@
   "Обновить страницу": "Обновить страницу",
   "Перевод": "Перевод",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
   "Язык": "English"
