[feat] add articlesItemsList and articleItem component, add navigation with mock data, add hook useHover

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "Articles": "Articles",
   "Articles page": "Articles page",
   "Avatar": "Avatar",
+  "Back to articles": "Back to articles",
   "Cancel edit": "Cancel edit",
   "City": "City",
   "Comments": "Comments",
@@ -21,6 +22,7 @@
   "No comments": "No comments",
   "Profile": "Profile",
   "ProfilePage": "Profile Page",
+  "Read more": "Read more...",
   "Save": "Save",
   "Send": "Send",
   "Username": "Username",
