--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,6 +5,7 @@
   "Articles": "Статьи",
   "Articles page": "Страница статей",
   "Avatar": "Аватар",
+  "Back to articles": "Назад к статьям",
   "Cancel edit": "Отменить",
   "City": "Город",
   "Comments": "Комментарии",
@@ -21,6 +22,7 @@
   "No comments": "Комментариев нет",
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
+  "Read more": "Читать далее",
   "Save": "Сохранить",
   "Send": "Отправить",
   "Username": "Никнейм",
