[feat] add articles type selector, add useDebounce, some refactor

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,14 +20,23 @@
   "Last name": "Last name",
   "Main": "Main",
   "No comments": "No comments",
+  "Order": "Order",
   "Profile": "Profile",
   "ProfilePage": "Profile Page",
   "Read more": "Read more...",
   "Save": "Save",
+  "Search": "Search",
   "Send": "Send",
+  "Sort by": "Sort",
   "Username": "Username",
+  "ascending": "ascending",
   "authForm": "Authorization form",
+  "by creating": "by creating",
+  "by default": "by default",
+  "by title": "by title",
+  "by views": "by views",
   "decrement": "decrement",
+  "descending": "descending",
   "incorrectAge": "Incorrect Age",
   "incorrectLength": "Incorrect Length",
   "increment": "increment",
@@ -46,5 +55,10 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Page not found",
   "Тестовый пример": "Test example",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "All topics": "All topics",
+  "IT": "IT",
+  "Science": "Science",
+  "Economics": "Economics",
+  "Articles not found": "Articles not found"
 }
