--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,14 +20,23 @@
   "Last name": "Ваша фамилия",
   "Main": "Главная",
   "No comments": "Комментариев нет",
+  "Order": "Порядок",
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
   "Read more": "Читать далее",
   "Save": "Сохранить",
+  "Search": "Поиск",
   "Send": "Отправить",
+  "Sort by": "Сортировать",
   "Username": "Никнейм",
+  "ascending": "возрастанию",
   "authForm": "Форма авторизации",
+  "by creating": "по дате создания",
+  "by default": "по умолчанию",
+  "by title": "по заголовку",
+  "by views": "по просмотрам",
   "decrement": "отнять",
+  "descending": "убыванию",
   "incorrectAge": "Некорректный возраст",
   "incorrectLength": "Некорректная длина",
   "increment": "прибавить",
@@ -46,5 +55,10 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English"
+  "Язык": "English",
+  "All topics": "Все темы",
+  "IT": "IT",
+  "Science": "Наука",
+  "Economics": "Экономика",
+  "Articles not found": "Статьи не найдены"
 }
