[feat] add articles recomendations to article detail page, some refactor

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -60,5 +60,6 @@
   "IT": "IT",
   "Science": "Science",
   "Economics": "Economics",
-  "Articles not found": "Articles not found"
+  "Articles not found": "Articles not found",
+  "Recommendations": "Recommendations"
 }
