--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -60,5 +60,6 @@
   "IT": "IT",
   "Science": "Наука",
   "Economics": "Экономика",
-  "Articles not found": "Статьи не найдены"
+  "Articles not found": "Статьи не найдены",
+  "Recommendations": "Рекомендации"
 }
