--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -61,5 +61,8 @@
   "Science": "Наука",
   "Economics": "Экономика",
   "Articles not found": "Статьи не найдены",
-  "Recommendations": "Рекомендации"
+  "Recommendations": "Рекомендации",
+  "Edit article": "Редактировать",
+  "Add article": "Создать статью",
+  "StoneK 79": "StoneK 79"
 }
