[fix] change remote server, fix some stories, upgrade useInitialEffect

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,11 @@
 {
   "About us": "About us",
+  "Add article": "Add article",
   "Age": "Age",
+  "All topics": "All topics",
   "Article detail page": "Article detail page",
   "Articles": "Articles",
+  "Articles not found": "Articles not found",
   "Articles page": "Articles page",
   "Avatar": "Avatar",
   "Back to articles": "Back to articles",
@@ -11,12 +14,15 @@
   "Comments": "Comments",
   "Country": "Country",
   "Currency": "Currency",
+  "Economics": "Economics",
+  "Edit article": "Edit article",
   "Edit profile": "Edit profile",
   "Enter comment text": "Enter comment text",
   "Enter password": "Enter password",
   "Enter text": "Enter text",
   "Enter username": "Enter username",
   "First name": "First name",
+  "IT": "IT",
   "Last name": "Last name",
   "Main": "Main",
   "No comments": "No comments",
@@ -24,10 +30,13 @@
   "Profile": "Profile",
   "ProfilePage": "Profile Page",
   "Read more": "Read more...",
+  "Recommendations": "Recommendations",
   "Save": "Save",
+  "Science": "Science",
   "Search": "Search",
   "Send": "Send",
   "Sort by": "Sort",
+  "StoneK 79": "StoneK 79",
   "Username": "Username",
   "ascending": "ascending",
   "authForm": "Authorization form",
@@ -55,14 +64,5 @@
   "Статья не найдена": "Article not found",
   "Страница не найдена": "Page not found",
   "Тестовый пример": "Test example",
-  "Язык": "Русский",
-  "All topics": "All topics",
-  "IT": "IT",
-  "Science": "Science",
-  "Economics": "Economics",
-  "Articles not found": "Articles not found",
-  "Recommendations": "Recommendations",
-  "Edit article": "Edit article",
-  "Add article": "Add article",
-  "StoneK 79": "StoneK 79"
+  "Язык": "Русский"
 }
