--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,8 +1,11 @@
 {
   "About us": "О сайте",
+  "Add article": "Создать статью",
   "Age": "Возраст",
+  "All topics": "Все темы",
   "Article detail page": "Детальная страница статьи",
   "Articles": "Статьи",
+  "Articles not found": "Статьи не найдены",
   "Articles page": "Страница статей",
   "Avatar": "Аватар",
   "Back to articles": "Назад к статьям",
@@ -11,12 +14,15 @@
   "Comments": "Комментарии",
   "Country": "Страна",
   "Currency": "Валюта",
+  "Economics": "Экономика",
+  "Edit article": "Редактировать",
   "Edit profile": "Редактировать",
   "Enter comment text": "Введите текст комментария",
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
   "First name": "Ваше имя",
+  "IT": "IT",
   "Last name": "Ваша фамилия",
   "Main": "Главная",
   "No comments": "Комментариев нет",
@@ -24,10 +30,13 @@
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
   "Read more": "Читать далее",
+  "Recommendations": "Рекомендации",
   "Save": "Сохранить",
+  "Science": "Наука",
   "Search": "Поиск",
   "Send": "Отправить",
   "Sort by": "Сортировать",
+  "StoneK 79": "StoneK 79",
   "Username": "Никнейм",
   "ascending": "возрастанию",
   "authForm": "Форма авторизации",
@@ -55,14 +64,5 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English",
-  "All topics": "Все темы",
-  "IT": "IT",
-  "Science": "Наука",
-  "Economics": "Экономика",
-  "Articles not found": "Статьи не найдены",
-  "Recommendations": "Рекомендации",
-  "Edit article": "Редактировать",
-  "Add article": "Создать статью",
-  "StoneK 79": "StoneK 79"
+  "Язык": "English"
 }
