[feat] add custom list box, add custom dropdown, some fix

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+  "": "",
   "About us": "О сайте",
   "Add article": "Создать статью",
   "Age": "Возраст",
@@ -21,6 +22,7 @@
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
+  "Exit": "Exit",
   "First name": "Ваше имя",
   "IT": "IT",
   "Last name": "Ваша фамилия",
