--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "": "",
   "About us": "About us",
   "Add article": "Add article",
   "Age": "Age",
@@ -21,6 +22,7 @@
   "Enter password": "Enter password",
   "Enter text": "Enter text",
   "Enter username": "Enter username",
+  "Exit": "Exit",
   "First name": "First name",
   "IT": "IT",
   "Last name": "Last name",
