--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,4 @@
 {
-  "": "",
   "About us": "О сайте",
   "Add article": "Создать статью",
   "Age": "Возраст",
@@ -22,7 +21,7 @@
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
-  "Exit": "Exit",
+  "Exit": "Выход",
   "First name": "Ваше имя",
   "IT": "IT",
   "Last name": "Ваша фамилия",
@@ -66,5 +65,8 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English"
+  "Язык": "English",
+  "Admin page panel": "Панель админа",
+  "Admin": "Админка",
+  "Access not allowed": "Доступ запрещен"
 }
