--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,9 @@
 {
   "About us": "О сайте",
+  "Access not allowed": "Доступ запрещен",
   "Add article": "Создать статью",
+  "Admin": "Админка",
+  "Admin page panel": "Панель админа",
   "Age": "Возраст",
   "All topics": "Все темы",
   "Article detail page": "Детальная страница статьи",
@@ -65,8 +68,5 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English",
-  "Admin page panel": "Панель админа",
-  "Admin": "Админка",
-  "Access not allowed": "Доступ запрещен"
+  "Язык": "English"
 }
