[feat] add article and profile ratings, some fix

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,7 @@
   "Articles page": "Страница статей",
   "Avatar": "Аватар",
   "Back to articles": "Назад к статьям",
+  "Cancel": "Cancel",
   "Cancel edit": "Отменить",
   "City": "Город",
   "Comments": "Комментарии",
@@ -41,7 +42,9 @@
   "Send": "Отправить",
   "Sort by": "Сортировать",
   "StoneK 79": "StoneK 79",
+  "Thanks for the rating!": "Спасибо за оценку!",
   "Username": "Никнейм",
+  "Your feedback": "Ваш отзыв",
   "ascending": "возрастанию",
   "authForm": "Форма авторизации",
   "by creating": "по дате создания",
@@ -68,5 +71,8 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English"
+  "Язык": "English",
+    "We will glad to get your vote": "Мы будем рады получить вашу оценку",
+  "Rate User profile": "Оцените профиль пользователя",
+  "Rate the article": "Оцените эту статью"
 }
