--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,6 +12,7 @@
   "Articles page": "Articles page",
   "Avatar": "Avatar",
   "Back to articles": "Back to articles",
+  "Cancel": "Cancel",
   "Cancel edit": "Cancel edit",
   "City": "City",
   "Comments": "Comments",
@@ -41,7 +42,9 @@
   "Send": "Send",
   "Sort by": "Sort",
   "StoneK 79": "StoneK 79",
+  "Thanks for the rating!": "Thanks for the rating!",
   "Username": "Username",
+  "Your feedback": "Your feedback",
   "ascending": "ascending",
   "authForm": "Authorization form",
   "by creating": "by creating",
@@ -68,5 +71,8 @@
   "Статья не найдена": "Article not found",
   "Страница не найдена": "Page not found",
   "Тестовый пример": "Test example",
-  "Язык": "Русский"
+  "Язык": "Русский",
+    "We will glad to get your vote": "We will glad to get your vote",
+  "Rate User profile": "Rate User profile",
+  "Rate the article": "Rate the article"
 }
