--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -34,6 +34,8 @@
   "Order": "Порядок",
   "Profile": "Профиль",
   "ProfilePage": "Страница профиля",
+  "Rate User profile": "Оцените профиль пользователя",
+  "Rate the article": "Оцените эту статью",
   "Read more": "Читать далее",
   "Recommendations": "Рекомендации",
   "Save": "Сохранить",
@@ -44,6 +46,7 @@
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Спасибо за оценку!",
   "Username": "Никнейм",
+  "We will glad to get your vote": "Мы будем рады получить вашу оценку",
   "Your feedback": "Ваш отзыв",
   "ascending": "возрастанию",
   "authForm": "Форма авторизации",
@@ -71,8 +74,5 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English",
-    "We will glad to get your vote": "Мы будем рады получить вашу оценку",
-  "Rate User profile": "Оцените профиль пользователя",
-  "Rate the article": "Оцените эту статью"
+  "Язык": "English"
 }
