[feat] add greeting Articles Page, refactor theme switch

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,6 +27,7 @@
   "Enter username": "Введите имя",
   "Exit": "Выход",
   "First name": "Ваше имя",
+  "Here you can read articles for different themes": "Здесь вы сможете просматривать статьи на разные темы",
   "IT": "IT",
   "Last name": "Ваша фамилия",
   "Main": "Главная",
@@ -49,6 +50,7 @@
   "Thanks for the rating!": "Спасибо за оценку!",
   "Username": "Никнейм",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
+  "Welcome to the Articles Page": "Добро пожаловать на страницу статей",
   "Your feedback": "Ваш отзыв",
   "ascending": "возрастанию",
   "authForm": "Форма авторизации",
