--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,6 +27,7 @@
   "Enter username": "Enter username",
   "Exit": "Exit",
   "First name": "First name",
+  "Here you can read articles for different themes": "Here you can read articles for different themes",
   "IT": "IT",
   "Last name": "Last name",
   "Main": "Main",
@@ -49,6 +50,7 @@
   "Thanks for the rating!": "Thanks for the rating!",
   "Username": "Username",
   "We will glad to get your vote": "We will glad to get your vote",
+  "Welcome to the Articles Page": "Welcome to the Articles Page",
   "Your feedback": "Your feedback",
   "ascending": "ascending",
   "authForm": "Authorization form",
