--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
   "Age": "Age",
   "All topics": "All topics",
   "Article detail page": "Article detail page",
+  "Article rating is in progress": "Article rating is in progress",
   "Articles": "Articles",
   "Articles not found": "Articles not found",
   "Articles page": "Articles page",
