--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "Age": "Возраст",
   "All topics": "Все темы",
   "Article detail page": "Детальная страница статьи",
+  "Article rating is in progress": "Article rating is in progress",
   "Articles": "Статьи",
   "Articles not found": "Статьи не найдены",
   "Articles page": "Страница статей",
