[ref] continue redesign

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,6 +49,8 @@
   "Sort by": "Sort",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Thanks for the rating!",
+  "Topick": "Topick",
+  "Topicks": "Topicks",
   "Username": "Username",
   "We will glad to get your vote": "We will glad to get your vote",
   "Welcome to the Articles Page": "Welcome to the Articles Page",
