--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -49,6 +49,8 @@
   "Sort by": "Сортировать",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Спасибо за оценку!",
+  "Topick": "Topick",
+  "Topicks": "Темы",
   "Username": "Никнейм",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
   "Welcome to the Articles Page": "Добро пожаловать на страницу статей",
