[ref] continue redesign

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,10 +27,10 @@
   "Enter text": "Enter text",
   "Enter username": "Enter username",
   "Exit": "Exit",
-  "First name": "First name",
+  "First name": "FirstName",
   "Here you can read articles for different themes": "Here you can read articles for different themes",
   "IT": "IT",
-  "Last name": "Last name",
+  "Last name": "LastName",
   "Main": "Main",
   "No comments": "No comments",
   "Order": "Order",
