--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,10 +27,10 @@
   "Enter text": "Введите текст",
   "Enter username": "Введите имя",
   "Exit": "Выход",
-  "First name": "Ваше имя",
+  "First name": "Имя",
   "Here you can read articles for different themes": "Здесь вы сможете просматривать статьи на разные темы",
   "IT": "IT",
-  "Last name": "Ваша фамилия",
+  "Last name": "Фамилия",
   "Main": "Главная",
   "No comments": "Комментариев нет",
   "Order": "Порядок",
