[feat] continue redesign, add design switcher

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "": "",
   "About us": "About us",
   "Access not allowed": "Access not allowed",
   "Add article": "Add article",
@@ -19,6 +20,7 @@
   "Comments": "Comments",
   "Country": "Country",
   "Currency": "Currency",
+  "Design switcher": "Design switcher",
   "Economics": "Economics",
   "Edit article": "Edit article",
   "Edit profile": "Edit profile",
@@ -32,7 +34,9 @@
   "IT": "IT",
   "Last name": "LastName",
   "Main": "Main",
+  "New": "New",
   "No comments": "No comments",
+  "Old": "Old",
   "Order": "Order",
   "Profile": "Profile",
   "Profile page error": "Profile page error",
@@ -51,6 +55,7 @@
   "Thanks for the rating!": "Thanks for the rating!",
   "Topick": "Topick",
   "Topicks": "Topicks",
+  "User settings": "User settings",
   "Username": "Username",
   "We will glad to get your vote": "We will glad to get your vote",
   "Welcome to the Articles Page": "Welcome to the Articles Page",
