--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+  "": "",
   "About us": "О сайте",
   "Access not allowed": "Доступ запрещен",
   "Add article": "Создать статью",
@@ -19,6 +20,7 @@
   "Comments": "Комментарии",
   "Country": "Страна",
   "Currency": "Валюта",
+  "Design switcher": "Design switcher",
   "Economics": "Экономика",
   "Edit article": "Редактировать",
   "Edit profile": "Редактировать",
@@ -32,7 +34,9 @@
   "IT": "IT",
   "Last name": "Фамилия",
   "Main": "Главная",
+  "New": "New",
   "No comments": "Комментариев нет",
+  "Old": "Old",
   "Order": "Порядок",
   "Profile": "Профиль",
   "Profile page error": "Ошибка отображения страницы профиля",
@@ -51,6 +55,7 @@
   "Thanks for the rating!": "Спасибо за оценку!",
   "Topick": "Topick",
   "Topicks": "Темы",
+  "User settings": "User settings",
   "Username": "Никнейм",
   "We will glad to get your vote": "Мы будем рады получить вашу оценку",
   "Welcome to the Articles Page": "Добро пожаловать на страницу статей",
