--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -78,6 +78,10 @@
   "serverError": "Ошибка сервера",
   "short-lng": "En",
   "throw error": "Пробросить ошибку",
+  "{{count}} views_zero": "{{count}} просмотров",
+  "{{count}} views_one": "{{count}} просмотр",
+  "{{count}} views_few": "{{count}} просмотра",
+  "{{count}} views_many": "{{count}} просмотров",
   "Главная страница": "Главная страница",
   "О сайте": "О сайте",
   "Обновить страницу": "Обновить страницу",
@@ -86,5 +90,6 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English"
+  "Язык": "English",
+  "{{count}} views": "{{count}} views"
 }
