[feat] continue redesign

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -78,10 +78,11 @@
   "serverError": "Ошибка сервера",
   "short-lng": "En",
   "throw error": "Пробросить ошибку",
-  "{{count}} views_zero": "{{count}} просмотров",
-  "{{count}} views_one": "{{count}} просмотр",
+  "{{count}} views": "{{count}} views",
   "{{count}} views_few": "{{count}} просмотра",
   "{{count}} views_many": "{{count}} просмотров",
+  "{{count}} views_one": "{{count}} просмотр",
+  "{{count}} views_zero": "{{count}} просмотров",
   "Главная страница": "Главная страница",
   "О сайте": "О сайте",
   "Обновить страницу": "Обновить страницу",
@@ -90,6 +91,5 @@
   "Статья не найдена": "Статья не найдена",
   "Страница не найдена": "Страница не найдена",
   "Тестовый пример": "Тестовый пример",
-  "Язык": "English",
-  "{{count}} views": "{{count}} views"
+  "Язык": "English"
 }
