--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -78,9 +78,10 @@
   "serverError": "Server Error",
   "short-lng": "Ru",
   "throw error": "Throw error",
-  "{{count}} views_zero": "{{count}} views",
+  "{{count}} views": "{{count}} views",
   "{{count}} views_one": "{{count}} view",
   "{{count}} views_other": "{{count}} views",
+  "{{count}} views_zero": "{{count}} views",
   "Главная страница": "Main page",
   "О сайте": "О сайте",
   "Обновить страницу": "Reload page",
@@ -89,6 +90,5 @@
   "Статья не найдена": "Article not found",
   "Страница не найдена": "Page not found",
   "Тестовый пример": "Test example",
-  "Язык": "Русский",
-  "{{count}} views": "{{count}} views"
+  "Язык": "Русский"
 }
