[feat] continue redesign

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -50,6 +50,7 @@
   "Science": "Наука",
   "Search": "Поиск",
   "Send": "Отправить",
+  "Settings": "Настройки",
   "Sort by": "Сортировать",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Спасибо за оценку!",
