--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -50,6 +50,7 @@
   "Science": "Science",
   "Search": "Search",
   "Send": "Send",
+  "Settings": "Settings",
   "Sort by": "Sort",
   "StoneK 79": "StoneK 79",
   "Thanks for the rating!": "Thanks for the rating!",
