--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -80,6 +80,9 @@
   "short-lng": "En",
   "throw error": "Пробросить ошибку",
   "{{count}} views": "{{count}} views",
+  "{{count}} views_0": "{{count}} views_0",
+  "{{count}} views_1": "{{count}} views_1",
+  "{{count}} views_2": "{{count}} views_2",
   "{{count}} views_few": "{{count}} просмотра",
   "{{count}} views_many": "{{count}} просмотров",
   "{{count}} views_one": "{{count}} просмотр",
