[feat] redesign continuation, add pictures to main page, improve article editing

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,8 @@
   "Admin page panel": "Admin page panel",
   "Age": "Age",
   "All topics": "All topics",
+  "Article Subtitle": "Article Subtitle",
+  "Article Title": "Article Title",
   "Article detail page": "Article detail page",
   "Article rating is in progress": "Article rating is in progress",
   "Articles": "Articles",
@@ -22,8 +24,11 @@
   "Currency": "Currency",
   "Design switcher": "Design switcher",
   "Economics": "Economics",
+  "Edit Code": "Edit Code",
   "Edit article": "Edit article",
   "Edit profile": "Edit profile",
+  "Edit text": "Edit text",
+  "Edit title": "Edit title",
   "Enter comment text": "Enter comment text",
   "Enter password": "Enter password",
   "Enter text": "Enter text",
@@ -32,6 +37,8 @@
   "First name": "FirstName",
   "Here you can read articles for different themes": "Here you can read articles for different themes",
   "IT": "IT",
+  "Image Path": "Image Path",
+  "Image title": "Image title",
   "Last name": "LastName",
   "Main": "Main",
   "New": "New",
