--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,8 @@
   "Admin page panel": "Панель админа",
   "Age": "Возраст",
   "All topics": "Все темы",
+  "Article Subtitle": "Подзаголовок статьи",
+  "Article Title": "Заголовок статьи",
   "Article detail page": "Детальная страница статьи",
   "Article rating is in progress": "Article rating is in progress",
   "Articles": "Статьи",
@@ -22,8 +24,11 @@
   "Currency": "Валюта",
   "Design switcher": "Design switcher",
   "Economics": "Экономика",
+  "Edit Code": "Редактировать Код",
   "Edit article": "Редактировать",
   "Edit profile": "Редактировать",
+  "Edit text": "Редактироват текст",
+  "Edit title": "Редактировать заголовок",
   "Enter comment text": "Введите текст комментария",
   "Enter password": "Введите пароль",
   "Enter text": "Введите текст",
@@ -32,6 +37,8 @@
   "First name": "Имя",
   "Here you can read articles for different themes": "Здесь вы сможете просматривать статьи на разные темы",
   "IT": "IT",
+  "Image Path": "Путь до изображения",
+  "Image title": "Заголовок изображения",
   "Last name": "Фамилия",
   "Main": "Главная",
   "New": "New",
